# pandas_lint

./: .gitignore  .pre-commit-hooks.yaml  README.md  debug_nb.py  pyproject.toml  run_cli.py
.github/workflows/: publish.yml  test.yml
pandas_lint/: analyzer.py  cli.py
pandas_lint/rules/: __init__.py  base.py  io.py  memory.py  performance.py  security.py  style.py
tests/: test_advanced.ipynb  test_analyzer.py  test_fixer.py  test_notebook.ipynb  test_rules.py
